# stm-variants

./: README.md  cabal.project  stm-variants.cabal
durable/: stm-variants-durable.cabal
durable/src/StmVariants/Durable/: LevelDB.hs
durable/src/StmVariants/Durable/Internal/: TypeableMap.hs
high-contention/: stm-variants-high-contention.cabal
high-contention/src/Control/Concurrent/STM/: HighContention.hs
high-contention/src/StmVariants/: HighContention.hs
src/STM/Variants/: DB.hs  LevelDB.hs
src/STM/Variants/LevelDB/: TypeableMap.hs
