cabal-version:      2.4
name:               stm-variants-durable
version:            0.1.0.0

library
  exposed-modules:  StmVariants.Durable.LevelDB
                  , StmVariants.Durable.Internal.TypeableMap
  default-language: GHC2021
  build-depends:    base
                  , aeson
                  , bytestring
                  , containers
                  , leveldb-haskell
                  , resourcet
                  , transformers
  hs-source-dirs:   src
  ghc-options: -W -Wall
