cabal-version:      2.4
name:               stm-variants-high-contention
version:            0.1.0.0

library
  exposed-modules:  StmVariants.HighContention
  default-language: GHC2021
  build-depends:    base
                  , containers
                  , transformers
  hs-source-dirs:   src
  ghc-options: -W -Wall
